// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index should fail to login (invalid header) 1`] = `
<DocumentFragment>
  <div
    class="MuiSnackbar-root MuiSnackbar-anchorOriginBottomCenter makeStyles-content-55"
  >
    <div
      aria-describedby="client-snackbar"
      class="MuiPaper-root MuiSnackbarContent-root makeStyles-warning-80 makeStyles-content-55 MuiPaper-elevation6"
      direction="up"
      role="alert"
      style="opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="MuiSnackbarContent-message"
      >
        <span
          class="makeStyles-message-83"
          id="client-snackbar"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-icon-81 makeStyles-iconVariant-82"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
            />
          </svg>
          Invalid header
        </span>
      </div>
      <div
        class="MuiSnackbarContent-action"
      >
        <button
          aria-label="close"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-icon-81"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="makeStyles-wrap-56"
  >
    <header
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary makeStyles-root-59 MuiPaper-elevation4"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
      >
        <h6
          class="MuiTypography-root makeStyles-title-61 MuiTypography-h6"
        >
          予約システム
        </h6>
        <div
          class="makeStyles-grow-62"
        />
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </header>
    <main
      class="makeStyles-main-57"
    >
      <div
        class="makeStyles-contents-58"
      >
        <div
          class="makeStyles-wrap-69"
          data-testid="page-dashboard"
        >
          <div
            class="makeStyles-wrap-70"
          >
            <div
              class="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                class="MuiCardContent-root"
              >
                <form
                  action="#"
                >
                  <div
                    class="MuiFormControl-root makeStyles-input-73"
                  >
                    <label
                      class="MuiFormLabel-root MuiFormLabel-filled Mui-required"
                      for="email"
                    >
                      Email address
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiInput-input"
                        id="email"
                        name="email"
                        placeholder="Enter email address"
                        required=""
                        type="email"
                        value="test@example.com"
                      />
                    </div>
                    <div
                      class="makeStyles-error-72"
                    />
                  </div>
                  <div
                    class="MuiFormControl-root makeStyles-input-73"
                  >
                    <label
                      class="MuiFormLabel-root MuiFormLabel-filled Mui-required"
                      for="password"
                    >
                      Password
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="makeStyles-wrap-74"
                    >
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-input-75 MuiInputBase-formControl MuiInput-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input"
                          id="password"
                          name="password"
                          placeholder="Enter password"
                          required=""
                          type="password"
                          value="password"
                        />
                      </div>
                      <div
                        class="makeStyles-toggle-76"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeSmall MuiButton-sizeSmall"
                          data-testid="password-switch"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            Show
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="makeStyles-error-72"
                    />
                  </div>
                  <div
                    class="makeStyles-login-71"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
                      tabindex="0"
                      type="submit"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Login
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <footer
      class="makeStyles-footer-67"
    >
      <div
        class="makeStyles-wrap-68"
      >
        2021 — 
        <strong>
          予約システム
        </strong>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Index should fail to login 1`] = `
<DocumentFragment>
  <div
    class="MuiSnackbar-root MuiSnackbar-anchorOriginBottomCenter makeStyles-content-25"
  >
    <div
      aria-describedby="client-snackbar"
      class="MuiPaper-root MuiSnackbarContent-root makeStyles-warning-50 makeStyles-content-25 MuiPaper-elevation6"
      direction="up"
      role="alert"
      style="opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="MuiSnackbarContent-message"
      >
        <span
          class="makeStyles-message-53"
          id="client-snackbar"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-icon-51 makeStyles-iconVariant-52"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
            />
          </svg>
          Request failed with status code 400
        </span>
      </div>
      <div
        class="MuiSnackbarContent-action"
      >
        <button
          aria-label="close"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-icon-51"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="makeStyles-wrap-26"
  >
    <header
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary makeStyles-root-29 MuiPaper-elevation4"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
      >
        <h6
          class="MuiTypography-root makeStyles-title-31 MuiTypography-h6"
        >
          予約システム
        </h6>
        <div
          class="makeStyles-grow-32"
        />
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </header>
    <main
      class="makeStyles-main-27"
    >
      <div
        class="makeStyles-contents-28"
      >
        <div
          class="makeStyles-wrap-39"
          data-testid="page-dashboard"
        >
          <div
            class="makeStyles-wrap-40"
          >
            <div
              class="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                class="MuiCardContent-root"
              >
                <form
                  action="#"
                >
                  <div
                    class="MuiFormControl-root makeStyles-input-43"
                  >
                    <label
                      class="MuiFormLabel-root MuiFormLabel-filled Mui-required"
                      for="email"
                    >
                      Email address
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiInput-input"
                        id="email"
                        name="email"
                        placeholder="Enter email address"
                        required=""
                        type="email"
                        value="test@example.com"
                      />
                    </div>
                    <div
                      class="makeStyles-error-42"
                    />
                  </div>
                  <div
                    class="MuiFormControl-root makeStyles-input-43"
                  >
                    <label
                      class="MuiFormLabel-root MuiFormLabel-filled Mui-required"
                      for="password"
                    >
                      Password
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="makeStyles-wrap-44"
                    >
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-input-45 MuiInputBase-formControl MuiInput-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input"
                          id="password"
                          name="password"
                          placeholder="Enter password"
                          required=""
                          type="text"
                          value="password"
                        />
                      </div>
                      <div
                        class="makeStyles-toggle-46"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeSmall MuiButton-sizeSmall"
                          data-testid="password-switch"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            Hide
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="makeStyles-error-42"
                    />
                  </div>
                  <div
                    class="makeStyles-login-41"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
                      tabindex="0"
                      type="submit"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Login
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <footer
      class="makeStyles-footer-37"
    >
      <div
        class="makeStyles-wrap-38"
      >
        2021 — 
        <strong>
          予約システム
        </strong>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Index should show login form 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-wrap-3"
  >
    <header
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary makeStyles-root-6 MuiPaper-elevation4"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
      >
        <h6
          class="MuiTypography-root makeStyles-title-8 MuiTypography-h6"
        >
          予約システム
        </h6>
        <div
          class="makeStyles-grow-9"
        />
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </header>
    <main
      class="makeStyles-main-4"
    >
      <div
        class="makeStyles-contents-5"
      >
        <div
          class="makeStyles-wrap-16"
          data-testid="page-dashboard"
        >
          <div
            class="makeStyles-wrap-17"
          >
            <div
              class="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                class="MuiCardContent-root"
              >
                <form
                  action="#"
                >
                  <div
                    class="MuiFormControl-root makeStyles-input-20"
                  >
                    <label
                      class="MuiFormLabel-root Mui-required"
                      for="email"
                    >
                      Email address
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiInput-input"
                        id="email"
                        name="email"
                        placeholder="Enter email address"
                        required=""
                        type="email"
                        value=""
                      />
                    </div>
                    <div
                      class="makeStyles-error-19"
                    />
                  </div>
                  <div
                    class="MuiFormControl-root makeStyles-input-20"
                  >
                    <label
                      class="MuiFormLabel-root Mui-required"
                      for="password"
                    >
                      Password
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="makeStyles-wrap-21"
                    >
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-input-22 MuiInputBase-formControl MuiInput-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input"
                          id="password"
                          name="password"
                          placeholder="Enter password"
                          required=""
                          type="password"
                          value=""
                        />
                      </div>
                      <div
                        class="makeStyles-toggle-23"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeSmall MuiButton-sizeSmall"
                          data-testid="password-switch"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            Show
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="makeStyles-error-19"
                    />
                  </div>
                  <div
                    class="makeStyles-login-18"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
                      tabindex="0"
                      type="submit"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Login
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <footer
      class="makeStyles-footer-14"
    >
      <div
        class="makeStyles-wrap-15"
      >
        2021 — 
        <strong>
          予約システム
        </strong>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;
